--- a/packages/components/src/ExPopover.less
+++ b/packages/components/src/ExPopover.less
@@ -40,3 +40,60 @@
     animation-fill-mode: forwards;
   }
 }
+
+.ExPopoverDivider {
+  width: auto;
+  background-color: #eee;
+  margin: 4px 8px;
+  height: 1px;
+}
+
+.ExPopoverMenu {
+  margin: 0 8px;
+  padding: 8px;
+  cursor: pointer;
+  flex-shrink: 0;
+  border-radius: 6px;
+  border: 0;
+  background-color: #fff;
+  max-width: 250px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  &.active {
+    background-color: rgba(223, 232, 250, 0.3);
+  }
+
+  &:first-child {
+    margin-top: 8px;
+  }
+
+  &:last-child {
+    margin-bottom: 8px;
+  }
+
+  &:hover {
+    background-color: #eee;
+  }
+
+  .icon {
+    display: flex;
+    width: 24px;
+    height: 24px;
+    user-select: none;
+    margin-right: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .text {
+    font-size: 15px;
+    display: flex;
+    line-height: 20px;
+    flex-grow: 1;
+    min-width: 150px;
+  }
+}
