--- a/packages/components/src/ExButton.less
+++ b/packages/components/src/ExButton.less
@@ -1,5 +1,13 @@
+.Button {
+  padding: 0;
+}
+
 .ExButton {
   position: relative;
+  padding: 0 22px;
+  display: flex;
+  height: 100%;
+  overflow: hidden;
 
   .loadingBox {
     position: absolute;
@@ -13,5 +21,22 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+  }
+
+  svg {
+    width: 22px;
+    height: 22px;
+  }
+
+  input[type='file'] {
+    cursor: pointer;
+    font-size: 0;
+    position: absolute;
+    opacity: 0;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 1;
   }
 }
